--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,8 @@ body {
 .container {
   display: flex;
   margin: 15rem 8rem;
+  justify-content: center;
+  align-items: center;
 }
 @media only screen and (max-width: 50em) {
   .container {
