--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -52,7 +52,8 @@ body {
 .container {
   display: flex;
   margin: 15rem 8rem;
-
+  justify-content: center;
+  align-items: center;
 
   @media only screen and (max-width: $bp-medium) {
     flex-direction: column;
